Symbology.  Multiple Symbology types, GUI work and layout.  Link symbology to datatables.  Add Java2D renderer for symbols, Using  FindBugs plugin work removing possible bugs.